--- a/gedcom/Cargo.toml
+++ b/gedcom/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0"
 
 [features]
 default = ["miette-highlighting"]
-miette-highlighting = ["miette/fancy-base"]
+miette-highlighting = ["miette/fancy-no-backtrace"]
 legacy-encodings = ["dep:oem_cp"]
 
 [dependencies]
@@ -24,4 +24,3 @@ vec1 = "1.12.1"
 [dev-dependencies]
 insta = { version = "1.39.0", features = ["glob"] }
 kdl = "4.6.0"
-miette = { git = "https://github.com/Porges/miette", branch = "invalid_unicode", features = ["fancy-no-backtrace"] }
