--- a/mdf/Cargo.toml
+++ b/mdf/Cargo.toml
@@ -11,4 +11,4 @@ gedcomfy = { path = "../gedcomfy" }
 miette = { git = "https://github.com/Porges/miette", branch = "invalid_unicode", features = ["fancy-no-backtrace"] }
 tracing-subscriber = "0.3.18"
 tracing = "0.1"
-cliclack = "0.3.2"
+paris = "1.5.15"
