--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -13,8 +13,8 @@ legacy-encodings = ["dep:oem_cp"]
 [dependencies]
 ascii = "1.1.0"
 encoding_rs = "0.8.34"
-# TODO: update once this is merged https://github.com/zkat/miette/pull/393
-miette = { git = "https://github.com/Porges/miette", branch = "invalid_unicode" }
+# TODO: update once this is released https://github.com/zkat/miette/pull/393
+miette = { git = "https://github.com/zkat/miette", features = ["fancy-no-backtrace"] }
 oem_cp = { version = "2.0.0", optional = true }
 owo-colors = "4.0.0"
 thiserror = "1.0.63"
