--- a/mdf/Cargo.toml
+++ b/mdf/Cargo.toml
@@ -8,7 +8,7 @@ license = "GPL-3.0"
 [dependencies]
 clap = { version = "4.5.13", features = ["derive"] }
 gedcomfy = { path = "../gedcomfy" }
-miette = { git = "https://github.com/Porges/miette", branch = "invalid_unicode", features = ["fancy-no-backtrace"] }
+miette = { git = "https://github.com/zkat/miette", features = ["fancy-no-backtrace"] }
 tracing-subscriber = "0.3.18"
 tracing = "0.1"
 paris = "1.5.15"
