--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -16,7 +16,7 @@ encoding_rs = "0.8.34"
 # TODO: update once this is released https://github.com/zkat/miette/pull/393
 miette = { git = "https://github.com/zkat/miette", features = ["fancy-no-backtrace"] }
 oem_cp = { version = "2.0.0", optional = true }
-owo-colors = "4.0.0"
+owo-colors = { version = "4.0.0", features = ["supports-colors"] }
 thiserror = "1.0.63"
 tracing = { version = "0.1", features = ["attributes"] }
 vec1 = "1.12.1"
