--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["gedcomfy", "gedcomesque", "mdf", "recoverable"]
+members = ["gedcomfy", "gedcomesque", "mdf"]
 resolver = "2"
 
 [profile.release]
