--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -17,6 +17,7 @@ encoding_rs = "0.8.34"
 miette = { git = "https://github.com/zkat/miette", features = ["fancy-no-backtrace"] }
 oem_cp = { version = "2.0.0", optional = true }
 owo-colors = { version = "4.0.0", features = ["supports-colors"] }
+paste = "1.0.15"
 serde = { version = "1.0.206", features = ["serde_derive"] }
 thiserror = "1.0.63"
 tracing = { version = "0.1", features = ["attributes"] }
