--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["gedcomfy", "gedcomesque", "mdf"]
+members = ["gedcomfy", "gedcomesque", "mdf", "errful", "errful-derive"]
 resolver = "2"
 
 [workspace.package]
