--- a/errful/Cargo.toml
+++ b/errful/Cargo.toml
@@ -8,3 +8,9 @@ edition.workspace = true
 [dependencies]
 thiserror = "1.0.63"
 errful-derive = { path = "../errful-derive" }
+owo-colors = "4.0.0"
+mappable-rc = "0.1.1"
+yoke = "0.7.4"
+
+[dev-dependencies]
+insta = "1.39.0"
