--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -19,11 +19,11 @@ miette = { git = "https://github.com/porges/miette", features = ["fancy-no-backt
 oem_cp = { version = "2.0.0", optional = true }
 owo-colors = { version = "4.0.0", features = ["supports-colors"] }
 paste = "1.0.15"
-self_cell = "1.0.4"
 thiserror = "1.0.63"
 tracing = { version = "0.1", features = ["attributes"] }
 vec1 = "1.12.1"
 kdl = { version = "4.6.0", optional = true }
+yoke = { version = "0.7.4", features = ["derive"] }
 
 [dev-dependencies]
 insta = { version = "1.39.0", features = ["glob"] }
