--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -14,6 +14,7 @@ kdl = ["dep:kdl"]
 [dependencies]
 ascii = "1.1.0"
 encoding_rs = "0.8.34"
+complex-indifference = { path = "../complex-indifference" }
 # TODO: update once this is released https://github.com/zkat/miette/pull/393
 miette = { git = "https://github.com/porges/miette", features = ["fancy-no-backtrace"], branch = "inherit-source-to-causes" }
 oem_cp = { version = "2.0.0", optional = true }
