--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -25,6 +25,7 @@ tracing = { version = "0.1", features = ["attributes"] }
 vec1 = "1.12.1"
 kdl = { version = "4.6.0", optional = true }
 yoke = { version = "0.7.4", features = ["derive"] }
+derive_more = { version = "1.0.0", features = ["from"] }
 
 [dev-dependencies]
 insta = { version = "1.39.0", features = ["glob"] }
