--- a/complex-indifference/Cargo.toml
+++ b/complex-indifference/Cargo.toml
@@ -5,4 +5,8 @@ authors.workspace = true
 license.workspace = true
 edition.workspace = true
 
+[features]
+unicode-width = ["dep:unicode-width"]
+
 [dependencies]
+unicode-width = { version = "0.1.13", optional = true }
