--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["gedcomfy", "gedcomesque", "mdf", "errful", "errful-derive", "complex-indifference"]
+members = ["gedcomfy", "gedcomesque", "mdf", "errful", "errful-derive", "complex-indifference", "snippets"]
 resolver = "2"
 
 [workspace.package]
