--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,10 @@
 FROM mcr.microsoft.com/devcontainers/rust:1-1-bookworm
 
-RUN curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
+RUN rustup toolchain install nightly -c clippy -c rustfmt -c rust-src
 
-RUN cargo binstall --no-confirm cargo-nextest cargo-insta
+USER vscode
+
+RUN curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
+RUN cargo binstall --no-confirm --locked cargo-nextest cargo-insta
+
+USER root
