--- a/errful/Cargo.toml
+++ b/errful/Cargo.toml
@@ -10,7 +10,7 @@ complex-indifference = { path = "../complex-indifference", features = ["unicode-
 errful-derive = { path = "../errful-derive" }
 impls = "1.0.3"
 mappable-rc = "0.1.1"
-owo-colors = { version = "4.0.0", features = ["alloc"] }
+owo-colors = { version = "4.0.0" }
 ref-cast = "1.0.23"
 snippets = { path = "../snippets" }
 textwrap = { version = "0.16.1", features = ["terminal_size"] }
