--- a/snippets/Cargo.toml
+++ b/snippets/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 
 [dependencies]
 complex-indifference = { path = "../complex-indifference", features = ["unicode-width"] }
-owo-colors = { version = "4.0.0", features = ["alloc"] }
+owo-colors = { version = "4.0.0" }
 unicode-width = "0.2.0"
 
 [dev-dependencies]
