Try cargo-chef to precompile deps

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,6 @@ RUN rustup toolchain install nightly -c clippy -c rustfmt -c rust-src
 USER vscode
 
 RUN curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
-RUN cargo binstall --no-confirm --locked cargo-nextest cargo-insta
+RUN cargo binstall --no-confirm --locked cargo-nextest cargo-insta cargo-chef
 
 USER root
