--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
-	"updateContentCommand": "cargo chef prepare --recipe-path .recipe.json && cargo chef cook --profile test --recipe-path .recipe.json && rm .recipe.json && git reset --hard HEAD",
+	"updateContentCommand": "cargo chef prepare --recipe-path .recipe.json && cargo chef cook --all-targets --profile test --recipe-path .recipe.json && rm .recipe.json && git reset --hard HEAD",
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 	}
