--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,9 @@ lto = "thin"
 
 [profile.dev.package]
 insta.opt-level = 3
+
+[profile.fuzz]
+inherits = "dev"
+opt-level = 3
+incremental = false
+codegen-units = 1
