--- a/snippets/Cargo.toml
+++ b/snippets/Cargo.toml
@@ -10,6 +10,12 @@ complex-indifference = { path = "../complex-indifference", features = ["unicode-
 owo-colors = { version = "4.0.0" }
 unicode-width = "0.2.0"
 textwrap = "0.16.1"
+vec1 = "1.12.1"
 
 [dev-dependencies]
+bolero = "0.11.1"
 insta = "1.39.0"
+
+[[test]]
+name = "render_test"
+harness = false
