Get rid of thiserror

--- a/errful/Cargo.toml
+++ b/errful/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 
 [dependencies]
 complex-indifference = { path = "../complex-indifference", features = ["unicode-width"] }
+derive_more = { version = "1.0.0", features = ["from", "display", "error"] }
 errful-derive = { path = "../errful-derive" }
 impls = "1.0.3"
 mappable-rc = "0.1.1"
@@ -14,7 +15,6 @@ owo-colors = { version = "4.0.0" }
 ref-cast = "1.0.23"
 snippets = { path = "../snippets" }
 textwrap = { version = "0.16.1", features = ["terminal_size"] }
-thiserror = "1.0.63"
 unicode-width = "0.2.0"
 url = "2.5.2"
 url-macro = "0.1.8"
