--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -13,19 +13,21 @@ kdl = ["dep:kdl"]
 
 [dependencies]
 ascii = "1.1.0"
-encoding_rs = "0.8.34"
 complex-indifference = { path = "../complex-indifference" }
-# TODO: update once this is released https://github.com/zkat/miette/pull/401
-miette = { git = "https://github.com/porges/miette", features = ["fancy-no-backtrace"], branch = "inherit-source-to-causes" }
+derive_more = { version = "1.0.0", features = ["from", "display", "error"] }
+errful = { path = "../errful" }
+encoding_rs = "0.8.34"
+kdl = { version = "4.6.0", optional = true }
+miette = { git = "https://github.com/porges/miette", features = [
+    "fancy-no-backtrace",
+], branch = "inherit-source-to-causes" }
 oem_cp = { version = "2.0.0", optional = true }
 owo-colors = { version = "4.0.0", features = ["supports-colors"] }
 paste = "1.0.15"
-thiserror = "1.0.63"
 tracing = { version = "0.1", features = ["attributes"] }
 vec1 = "1.12.1"
-kdl = { version = "4.6.0", optional = true }
 yoke = { version = "0.7.4", features = ["derive"] }
-derive_more = { version = "1.0.0", features = ["from", "display"] }
+
 
 [dev-dependencies]
 insta = { version = "1.39.0", features = ["glob"] }
