--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -18,9 +18,7 @@ derive_more = { version = "1.0.0", features = ["from", "display", "error"] }
 errful = { path = "../errful" }
 encoding_rs = "0.8.34"
 kdl = { version = "4.6.0", optional = true }
-miette = { git = "https://github.com/porges/miette", features = [
-    "fancy-no-backtrace",
-], branch = "inherit-source-to-causes" }
+miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
 oem_cp = { version = "2.0.0", optional = true }
 owo-colors = { version = "4.0.0", features = ["supports-colors"] }
 paste = "1.0.15"
