--- a/mdf/Cargo.toml
+++ b/mdf/Cargo.toml
@@ -8,7 +8,7 @@ authors.workspace = true
 [dependencies]
 clap = { version = "4.5.13", features = ["derive"] }
 gedcomfy = { path = "../gedcomfy" }
-miette = { git = "https://github.com/Porges/miette", features = ["fancy-no-backtrace"], branch="inherit-source-to-causes" }
+miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
 tracing-subscriber = "0.3.18"
 tracing = "0.1"
 fancy-duration = "0.9.2"
