--- a/mdf/Cargo.toml
+++ b/mdf/Cargo.toml
@@ -6,9 +6,11 @@ license.workspace = true
 authors.workspace = true
 
 [dependencies]
-clap = { version = "4.5.13", features = ["derive"] }
 gedcomfy = { path = "../gedcomfy" }
+
+clap = { version = "4.5.13", features = ["derive"] }
+fancy-duration = "0.9.2"
+iocraft = "0.5.0"
 miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
 tracing-subscriber = "0.3.18"
 tracing = "0.1"
-fancy-duration = "0.9.2"
