--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -25,6 +25,7 @@ paste = "1.0.15"
 tracing = { version = "0.1", features = ["attributes"] }
 vec1 = "1.12.1"
 yoke = { version = "0.7.4", features = ["derive"] }
+itertools = "0.14.0"
 
 
 [dev-dependencies]
