--- a/gedcomesque/Cargo.toml
+++ b/gedcomesque/Cargo.toml
@@ -13,6 +13,7 @@ sea-orm = { version = "1.0.0", features = [
 ] }
 
 [dev-dependencies]
-miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
+errful = { path = "../errful" }
 tokio = { version = "1.39.2", features = ["rt", "macros"] }
 gedcomfy = { path = "../gedcomfy" }
+derive_more = { version = "2.0.1", features = ["display", "from"] }
