--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -14,7 +14,7 @@ kdl = ["dep:kdl"]
 [dependencies]
 ascii = "1.1.0"
 complex-indifference = { path = "../complex-indifference" }
-derive_more = { version = "1.0.0", features = ["from", "display", "error"] }
+derive_more = { version = "2.0.1", features = ["from", "display"] }
 errful = { path = "../errful" }
 encoding_rs = "0.8.34"
 kdl = { version = "4.6.0", optional = true }
@@ -28,6 +28,7 @@ yoke = { version = "0.7.4", features = ["derive"] }
 itertools = "0.14.0"
 memmap2 = "0.9.5"
 dunce = "1.0.5"
+thiserror = "2.0.12"
 
 
 [dev-dependencies]
