--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,10 @@
+edition = "2024"
+style_edition = "2024"
+newline_style = "Unix"
+
 imports_granularity = "Crate"
 group_imports = "StdExternalCrate"
+
+use_field_init_shorthand = true
+
+struct_lit_width = 50
