--- a/gedcomfy/Cargo.toml
+++ b/gedcomfy/Cargo.toml
@@ -26,6 +26,7 @@ miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
 oem_cp = { version = "2.0.0", optional = true }
 owo-colors = { version = "4.0.0", features = ["supports-colors"] }
 paste = "1.0.15"
+rstest = { version = "0.25.0", default-features = false }
 sophia_api = { version = "0.9.0", optional = true }
 sophia_turtle = { version = "0.9.0", optional = true }
 thiserror = "2.0.12"
@@ -35,4 +36,5 @@ yoke = { version = "0.7.4", features = ["derive"] }
 
 
 [dev-dependencies]
+indoc = "2.0.6"
 insta = { version = "1.39.0", features = ["glob"] }
