--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,6 @@
         "rust-lang.rust-analyzer",
         "tamasfe.even-better-toml",
         "iliazeus.vscode-ansi",
-        "fill-labs.dependi"
+        "pflannery.vscode-versionlens",
     ]
 }
