--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
         "miette",
         "rstest",
         "subrecord",
-        "thiserror"
+        "thiserror",
+    ],
+    "coverage-gutters.coverageBaseDir": ".",
+    "coverage-gutters.coverageFileNames": [
+        "lcov.info"
     ]
 }
