--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "cSpell.ignoreRegExpList": [
+        "\\b[A-Z]{4}\\b" // ignore GEDCOM tags
+    ],
     "cSpell.words": [
         "ANSEL",
         "GEDCOM",
