--- a/complex-indifference/Cargo.toml
+++ b/complex-indifference/Cargo.toml
@@ -6,7 +6,9 @@ license.workspace = true
 edition.workspace = true
 
 [features]
+default = ["unicode-width"]
 unicode-width = ["dep:unicode-width"]
+no-unsafe = []
 
 [dependencies]
 unicode-width = { version = "0.2.0", optional = true }
