--- a/snippets/Cargo.toml
+++ b/snippets/Cargo.toml
@@ -13,8 +13,9 @@ textwrap = "0.16.1"
 vec1 = "1.12.1"
 
 [dev-dependencies]
-bolero = "0.12.0"
-insta = "1.39.0"
+bolero = "0.13.3"
+indoc = "2.0.6"
+insta = "1.43.1"
 
 [[test]]
 name = "render_test"
